<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <EditText
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txtTitle"
        android:textColor="#FF0000"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="31dp" />

    <EditText
        android:id="@+id/txtWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/hint"
        android:inputType="number"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="123dp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="217dp" />

    <RadioButton
        android:id="@+id/radLbToKilo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radLbToKilo"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="195dp" />

    <RadioButton
        android:id="@+id/radKiloToLb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radKiloToLb"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="227dp" />

    <Button
        android:id="@+id/btnConvert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center_horizontal"
        android:text="@string/btnConvert"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="66dp"
        tools:layout_editor_absoluteY="289dp" />

    <EditText
        android:id="@+id/txtResult"
        android:layout_width="147dp"
        android:layout_height="26dp"
        android:layout_margin="25dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="#FF0000"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="107dp"
        tools:layout_editor_absoluteY="371dp" />
</androidx.constraintlayout.widget.ConstraintLayout>